Possible bug with VkCopyDescriptorSet and inline uniform blocks under ANV
While visually inspecting the code for ANV's vkUpdateDescriptorSets implementation I came across this section dealing with the VkCopyDescriptorSet part:
Inline uniform blocks cannot form arrays and give special meaning to srcArrayElement
and dstArrayElement
, using them as byte offsets inside the block. However, the first code sections inside the loop, and specifically the nested for loop, seem to be copying descriptors using these ArrayElement fields without checking if they are inline uniform blocks. This is checked just below, while copying data. Can you check if this code is OK? Thanks in advance.